# sibyl

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
sibyl/: __init__.py  analyzer.py  chunker.py  core.py  models.py  router.py
sibyl/backends/: __init__.py  anthropic.py  base.py  gemini.py  lmstudio.py  ollama.py  openai.py
sibyl/extractors/: __init__.py  base.py  docling_ext.py  markitdown_ext.py  pymupdf_ext.py  vision_ocr.py
sibyl/utils/: __init__.py  images.py  pdf.py  tables.py  text_quality.py
tests/: test_analyzer.py  test_backends.py  test_chunker.py  test_core.py  test_models.py  test_router.py  test_tables.py  test_text_quality.py
